2010-03-26  Nicolas François  <nicolas.francois@centraliens.net>

	* etc/login.defs: Updated description of UMASK to indicate its
	usage by pam_umask.

2010-03-25  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.1.xml: login does not check for new mails in PAM
	enabled versions. This is done by pam_mail.

2010-03-25  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/chpasswd.c, man/chpasswd.8.xml, man/login.defs.5.xml:
	PAM enabled versions: restore the -e option to allow restoring
	passwords without knowing those passwords. Restore together the -m
	and -c options.

2010-03-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c, src/vipw.c, src/newgrp.c: When the child is
	interrupted, stop ourself with a SIGSTOP signal.

2010-03-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Limit the scope of variable pid.
	* src/login_nopam.c: Limit the scope of variables end, lineno, i,
	str_len.
	* src/logoutd.c: Limit the scope of variable c.
	* src/vipw.c: Re-indent.
	* src/vipw.c: Close the file after the creation of the backup.
	* src/useradd.c (set_default): Close input file on failure.
	* src/useradd.c: Limit the scope of variables spool, file, fd, gr,
	gid, mode.
	* src/passwd.c: Limit the scope of variables last and ok.
	* src/chage.c: Fix typo (non breaking space).
	* src/login.c: Limit the scope of variables erasechar killchar, c,
	failed.
	* src/groups.c: Limit the scope of variable ngroups, pri_grp, i.
	* src/id.c: Limit the scope of variable i.

2010-03-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/utent.c (getutline): Remove getutline(). This function is
	no more used.
	* lib/groupmem.c: Limit the scope of variable i.
	* lib/shadow.c: Avoid implicit conversion of pointers and integers
	to booleans.
	* lib/shadow.c: Added brackets.
	* libmisc/limits.c: Limit the scope of variable tmpmask.
	* libmisc/copydir.c: Close opened file on failure.